# hdctool

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: api.md  assertion-module.md  cv-module.md  getting-started.md  index.md  ui-driver.md
examples/: fastapi_server.py  hdc_demo.py
src/hdctool/: __init__.py  channel_handshake.py  client.py  command.py  connection.py  events.py  exceptions.py  exec_command.py  factory.py  hdc_cli.py  hilog.py  log.py  target.py  tracker.py  types.py  util.py  version.py
src/hdctool/commands/: __init__.py  file.py  forward.py  get_parameters.py  hilog_cmd.py  install.py  reverse.py  shell.py  targets.py
src/hdctool/ui/: __init__.py  assertion.py  cv.py  driver.py  subsystems.py
tests/: test_events.py  test_exceptions.py  test_factory.py  test_handshake.py  test_package.py  test_ui_subsystems.py  test_util.py
